--- a/client-fs.cabal
+++ b/client-fs.cabal
@@ -18,6 +18,8 @@ library
   exposed-modules:     FileManager
   build-depends:       base >= 4.7
                      , directory >= 1.2.7.0
+                     , split
+                     , random
   default-language:    Haskell2010
 
 executable client-fs-exe
