--- a/docker-lizardfs/shadow/Dockerfile
+++ b/docker-lizardfs/shadow/Dockerfile
@@ -27,9 +27,9 @@ RUN cp /etc/mfs/mfsexports.cfg.dist /etc/mfs/mfsexports.cfg
 RUN cp /etc/mfs/mfsgoals.cfg.dist /etc/mfs/mfsgoals.cfg
 RUN cp /etc/mfs/mfstopology.cfg.dist /etc/mfs/mfstopology.cfg
 
-# TO CHANGE !!!!
-RUN echo "172.17.0.0/24 / rw,alldirs,maproot=0" >> /etc/mfs/mfsexports.cfg
+ADD run.sh /
 
+RUN echo "172.17.0.0/24 / rw,alldirs,maproot=0" >> /etc/mfs/mfsexports.cfg
 RUN echo "PERSONALITY=shadow" >> /etc/mfs/mfsmaster.cfg
 
 RUN sed -i 's/LIZARDFSMASTER_ENABLE=false/LIZARDFSMASTER_ENABLE=true/g' /etc/default/lizardfs-master
